[ui] play btn too small -- has resize issues

--- a/src/c++/UI/frontend/static/stylesheets/common.css
+++ b/src/c++/UI/frontend/static/stylesheets/common.css
@@ -159,6 +159,10 @@
     width: 1%;
 }
 
+.width-5 {
+    width: 5%;
+}
+
 .width-10 {
     width: 10%;
 }
